--- a/templates/side_navbar.html
+++ b/templates/side_navbar.html
@@ -67,10 +67,10 @@
   <aside id="sidebar" class="sidebar bg-white border-end collapsed">
     
 
-    <h5 class="sidebar-title mt-4">AutoNgx</h5>
+    
 
     <!-- Dashboard -->
-    <div class="nav-section">
+    <div class="nav-section mt-5">
       <div class="nav-title">
         <span class="bi bi-house  nav-icon"></span>
         <span class="nav-text">Dashboard</span>
