--- a/static/css/style.css
+++ b/static/css/style.css
@@ -678,8 +678,15 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Box shadow for depth */
 }
 
+.site-logo{
+  height: 60px;
+  width: auto;
+}
 /* Optional: Add responsive design for smaller screens */
 @media (max-width: 768px) {
+  .site-logo{
+      height: 40px;
+    }
   .container-maincontent {
     padding: 10px; 
     max-width: 100%; 
@@ -1212,6 +1219,31 @@ footer {
     border: 1px solid #a3c9ff; /* optional border for depth */
     box-shadow: 0 2px 6px rgba(0,0,0,0.08); /* subtle shadow */
   }
+
+.notification-box {
+    display: inline-flex; 
+    align-items: center;
+    gap: 12px; 
+    padding: 12px 20px; 
+    border-radius: 8px; 
+    font-weight: 600;
+    font-size: 15px; 
+    min-width: 150px; 
+    background-color: #57e3ff3e; 
+    box-shadow: 0 4px 12px var(--cube-dark); 
+    animation: flashing-bg 0.8s ease-in-out infinite alternate; 
+}
+
+@keyframes flashing-bg {
+    0% {
+        background-color: #57e3ff3e; 
+    }
+    100% {
+        background-color: #57e3ff80; 
+    }
+}
+
+
 
 
 
