--- a/templates/auto_reply_email.html
+++ b/templates/auto_reply_email.html
@@ -61,25 +61,29 @@ body {
 
     <p style="font-size:16px; color:#444;">
       Hello <strong>{{ name }}</strong>,<br><br>
-      Thank you for contacting <strong>AutoNgx</strong>.
+      Thank you for getting in touch with <strong>AutoNgx</strong>.
     </p>
 
     <p style="font-size:15px; color:#555;">
-      We’ve received your message and our team will respond within
-      <strong>2 business days</strong>.
+     We’ve received your message and one of our team members will get back to you within
+      <strong>2 business hours</strong>.
     </p>
 
     <p style="font-size:15px; color:#555;">
-      If your enquiry is urgent, please contact us at:
+      If your enquiry is urgent, don’t hesitate to contact us directly at:
     </p>
 
     <p style="font-size:15px; color:#1e90ff;">
       <strong>support@AutoNgx.com</strong>
     </p>
 
+    <p style="margin-top:30px;">
+      We look forward to assisting you!
+    </p>
+
     <p style="margin-top:25px; color:#444;">
-      Kind regards,<br>
-      <strong>AutoNgx Team</strong>
+      Warm regards,<br>
+      <strong>The AutoNgx Team</strong>
     </p>
   </div>
 
