--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,24 +26,24 @@
 
 /* Navbar background */
 .custom-navbar {
-  background-color: #263f54;
+  background-color: #fff;
   backdrop-filter: blur(30px) !important;
 }
 
 /* Links */
 .custom-navbar .nav-link {
-  color: #ffffff;
+ 
   font-weight: 500;
 }
 
 .custom-navbar .nav-link:hover {
-  color: #dbe9f4;
+  color: #3a5f7d;
 }
 
 .custom-navbar .nav-link.active {
-  color: #ffffff;
+  color: #3a5f7d;
   font-weight: 600;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 2px solid #263f54;
 }
 
 /* ===============================
@@ -64,7 +64,7 @@
 .navbar-toggler-icon {
   width: 24px;
   height: 2px;
-  background: #fff;
+  background: #bbb;
   position: relative;
   display: inline-block;
   transition: all 0.3s ease;
@@ -77,7 +77,7 @@
   left: 0;
   width: 24px;
   height: 2px;
-  background: #fff;
+  background:var(--primary);
   transition: all 0.3s ease;
 }
 
@@ -119,15 +119,7 @@
   transform: translateY(-2px);
 }
 
-/* HERO */
-/* .hero-section {
-  background:
-    linear-gradient(rgba(14,42,56,.85), rgba(14,42,56,.85)),
-    url('/static/images/hero-car.png')
-    center/cover no-repeat;
-  padding: 150px 0;
-  color: #fff;
-} */
+
 
 
 /* HERO SECTION */
@@ -476,7 +468,7 @@
   }
    .custom-navbar .nav-link.active {
     border-bottom: none;
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color:  rgba(0, 255, 255, 0.078);
     padding-left: 10px;
   }
 }
