--- a/templates/index.html
+++ b/templates/index.html
@@ -254,7 +254,7 @@ section[id] {
 </head>
 <body>
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar sticky-top shadow-sm">
   <div class="container">
     <a class="navbar-brand" href="#">
         <img src="{% static 'images/logo.png' %}" alt="AUTiQ" class="site-logo">
@@ -271,7 +271,7 @@ section[id] {
 </button>
 
     <div class="collapse navbar-collapse" id="aqNavbar">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-md-3 gap-md-4">
         <li class="nav-item"><a class="nav-link active" href="#hero">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#capabilities">Capabilities</a></li>
         <li class="nav-item"><a class="nav-link" href="#hub">Intelligence Hub</a></li>
