--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
 <body>
 
 
-<nav class="navbar navbar-expand-lg custom-navbar ">
+<nav class="navbar navbar-expand-lg custom-navbar navbar-light bg-light  shadow-sm">
   
   <div class="container-fluid">
 
